# oci-bot

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: dev-deploy.yml
config/: app_config.dev.yml
deployment/: values.yaml
oci_bot/: agent.py  bot.py  config.py
scripts/: setup-miniconda.ps1  setup-miniconda.sh  setup-oci-config.ps1  setup-oci-config.sh  setup-oci.sh
