[tool.poetry]
name = "oci-bot"
version = "0.1.0"
description = "OCI bot for OCI GenAI demonstration"
authors = ["sachinlv <sachin.lingadahalli.vittal@oracle.com>"]
license = "GNU2.0"
readme = "README.md"

[tool.poetry.dependencies]
oci = "^2.140.0"
python = "^3.11"
langchain = "^0.3.26"
langchain-community = "^0.3.27"
streamlit = "^1.46.1"
oracledb = "^3.2.0"
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
ruff = "^0.8.2"
python-semantic-release = "^9.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
